[GStreamer] WebAudio provider should clean-up its bin when the client disappears https://bugs.webkit.org/show_bug.cgi?id=219245

Reviewed by Xabier Rodriguez-Calvar.

Source/WebCore:

Clean-up elements downstream of the deinterleave element when the provider client changes or
is removed.

* platform/audio/gstreamer/AudioSourceProviderGStreamer.cpp:
(WebCore::copyGStreamerBuffersToAudioChannel):
(WebCore::AudioSourceProviderGStreamer::provideInput):
(WebCore::AudioSourceProviderGStreamer::handleSample):
(WebCore::AudioSourceProviderGStreamer::setClient):
(WebCore::AudioSourceProviderGStreamer::handleRemovedDeinterleavePad):
(WebCore::AudioSourceProviderGStreamer::deinterleavePadsConfigured):
* platform/graphics/gstreamer/GStreamerCommon.cpp:
(WebCore::disconnectSimpleBusMessageCallback): Drive-by, remove bus signal handler.
(WebCore::connectSimpleBusMessageCallback):
* platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp: Drive-by, define
GST_CAT_DEFAULT earlier so that all GST_DEBUG call sites actually log something.

LayoutTests:

Unflag tests no longer crashing.

* platform/glib/TestExpectations:
* platform/gtk-wayland/TestExpectations:
* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/232869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271290 268f45cc-cd09-0410-ab3c-d52691b4dbfc