Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp
@@ -404,13 +404,14 @@ static void simpleBusMessageCallback(GstBus*, GstMessage* message, GstBin* pipel
 
 void disconnectSimpleBusMessageCallback(GstElement* pipeline)
 {
-    GRefPtr<GstBus> bus = adoptGRef(gst_pipeline_get_bus(GST_PIPELINE(pipeline)));
+    auto bus = adoptGRef(gst_pipeline_get_bus(GST_PIPELINE(pipeline)));
     g_signal_handlers_disconnect_by_func(bus.get(), reinterpret_cast<gpointer>(simpleBusMessageCallback), pipeline);
+    gst_bus_remove_signal_watch(bus.get());
 }
 
 void connectSimpleBusMessageCallback(GstElement* pipeline)
 {
-    GRefPtr<GstBus> bus = adoptGRef(gst_pipeline_get_bus(GST_PIPELINE(pipeline)));
+    auto bus = adoptGRef(gst_pipeline_get_bus(GST_PIPELINE(pipeline)));
     gst_bus_add_signal_watch_full(bus.get(), RunLoopSourcePriority::RunLoopDispatcher);
     g_signal_connect(bus.get(), "message", G_CALLBACK(simpleBusMessageCallback), pipeline);
 }
